--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
             <div class="logo"></div>
         </section>
         <section class="login">
-            <input type="login" placeholder="Login"> <i class="icon-user"></i> 
+            <input id="login" type="login" name="login" placeholder="Login"> <i class="icon-user"></i> 
         </section>
+        <div id="ilogin" class="error"></div>
         <section class="password">
-            <input type="password" placeholder="Password"> <i class="icon-asterisk"></i> 
-        </section>
+            <input id="password" type="password" name="password" placeholder="Password"> <i class="icon-asterisk"></i>
+        </section>  
+        <div id="ipassword" class="error"></div>
         <button>SIGN IN</button>
         <section class="help">
             <div class="forgot-password">Forgot password?</div>
