--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
         <section class="login">
             <input id="login" type="login" name="login" placeholder="Login"> <i class="icon-user"></i> 
         </section>
-        <div id="ilogin" class="error"></div>
+        <div id="ilogin" class="error">Fill out the form</div>
         <section class="password">
             <input id="password" type="password" name="password" placeholder="Password"> <i class="icon-asterisk"></i>
         </section>  
-        <div id="ipassword" class="error"></div>
-        <button>SIGN IN</button>
+        <div id="ipassword" class="error">Fill out the form</div>
+        <button type="submit">SIGN IN</button>
         <section class="help">
             <div class="forgot-password">Forgot password?</div>
             <div class="create-new">Create an acount</div>
